adding UserAuth and Stockpile module. Adding gulp (postcss, js compile/minimize) and dev config (show errors) in DEV

--- a/code/module/Application/view/layout/canada.ca.phtml
+++ b/code/module/Application/view/layout/canada.ca.phtml
@@ -407,7 +407,7 @@ $usefulLinksLocation = $layout->usefulLinksLocation;
         </div>
 
         <!-- Write closure template -->
-        <script defer="defer">
+        <script>
             var defTop = document.getElementById("def-top");
             defTop.outerHTML = wet.builder.top({
                 cdnEnv: "<?=$cdtsEnv;?>",
