--- a/code/module/UserAuth/view/user-auth/index/handle-reset-password.phtml
+++ b/code/module/UserAuth/view/user-auth/index/handle-reset-password.phtml
@@ -7,7 +7,7 @@ $this->metadata['extra-js'] = '/js/userauth-register.js';
 ?>
 
 <div class="wb-frmvld">
-    <form action="<?=$this->url('user/register',['locale'=>$this->lang]);?>" method="post" id="validation-example">
+    <form action="<?=$this->url('user/reset-password/handle',['locale'=>$this->lang, 'token'=>$this->token]);?>" method="post" id="validation-example">
         <?if($this->errors && count($this->errors)):?>
             <section id="errors-validation-example" class="alert alert-danger" tabindex="-1">
                 <h2><?=sprintf($this->translate("The form could not be submitted because %d error(s) was found."),count($this->errors));?></h2>
