--- a/code/module/Application/view/layout/canada.ca.phtml
+++ b/code/module/Application/view/layout/canada.ca.phtml
@@ -4,6 +4,7 @@ use \Application\Model\Breadcrumbs;
 <?= $this->doctype() ?>
 <?php
 $layout = $this->viewModel()->getCurrent();
+
 $this->completeMetadata($layout);
 $views = $layout->getChildren();
 $view = isset($views[0]) ? $views[0] : $layout;
@@ -36,13 +37,16 @@ elseif(is_string($this->attribution) && strpos($this->attribution, '|')) {
 }
 
 if(!$this->contentSecurityPolicy) {
-    $this->contentSecurityPolicy = "default-src 'self' *.canada.ca healthycanadians.gc.ca canadiaensensante.gc.ca ajax.googleapis.com www.google-analytics.com www.googletagmanager.com *.googleapis.com fonts.gstatic.com use.fontawesome.com 'unsafe-eval' 'unsafe-inline'";
+    $this->contentSecurityPolicy = "default-src 'self' *.canada.ca healthycanadians.gc.ca canadiaensensante.gc.ca code.jquery.com ajax.googleapis.com www.google-analytics.com ssl.google-analytics.com www.googletagmanager.com *.googleapis.com fonts.gstatic.com use.fontawesome.com 'unsafe-eval' 'unsafe-inline'";
 }
+
 
 $sideMenu = $layout->sideMenu;
 $sideMenuLocation = $layout->sideMenuLocation;
 $usefulLinks = $layout->usefulLinks;
+$usefulLinksTitle = $layout->usefulLinksTitle ? $layout->usefulLinksTitle : $this->translate('Useful Links');
 $usefulLinksLocation = $layout->usefulLinksLocation;
+
 ?>
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9<?=!$cdtsEnv==='live'?' dev':'';?>" lang="<?=$this->lang;?>" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js<?=!$cdtsEnv==='live'?' dev':'';?>" lang="<?=$this->lang;?>" dir="ltr">
@@ -300,7 +304,7 @@ $usefulLinksLocation = $layout->usefulLinksLocation;
             <div class="col-md-3 <?=$usefulLinksLocation!='right' ? ' col-md-pull-9' : '';?>">
                 <section class="panel panel-primary">
                     <header class="panel-heading">
-                        <h5 class="panel-title"><?=$this->translate('Useful Links');?></h5>
+                        <h5 class="panel-title"><?=$usefulLinksTitle;?></h5>
                     </header>
                     <div class="panel-body">
                     <?foreach($usefulLinks as $link):?>
