remove duplicate of doctype

--- a/code/module/Application/view/layout/canada.ca.phtml
+++ b/code/module/Application/view/layout/canada.ca.phtml
@@ -48,7 +48,7 @@ $usefulLinksTitle = $layout->usefulLinksTitle ? $layout->usefulLinksTitle : $thi
 $usefulLinksLocation = $layout->usefulLinksLocation;
 
 ?>
-<!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9<?=!$cdtsEnv==='live'?' dev':'';?>" lang="<?=$this->lang;?>" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<!--[if lt IE 9]><html class="no-js lt-ie9<?=!$cdtsEnv==='live'?' dev':'';?>" lang="<?=$this->lang;?>" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js<?=!$cdtsEnv==='live'?' dev':'';?>" lang="<?=$this->lang;?>" dir="ltr">
     <!--<![endif]-->
     <head>
