--- a/code/module/Application/view/application/index/index.phtml
+++ b/code/module/Application/view/application/index/index.phtml
@@ -2,6 +2,5 @@
 /**
  * @var Laminas\View\Renderer\PhpRenderer $this
  */
-$this->metadata['title'] = 'This is the index page';
+$this->metadata['title'] = 'This is the default index page and should be overwritten by the application';
 ?>
-index
