Added the OAuth module and modification of UserAuth for OAuth

--- a/code/module/UserAuth/view/user-auth/index/handle-reset-password.phtml
+++ b/code/module/UserAuth/view/user-auth/index/handle-reset-password.phtml
@@ -3,7 +3,7 @@
  * @var Laminas\View\Renderer\PhpRenderer $this
  */
 $this->metadata['title'] = $this->translate('Reset your password');
-$this->metadata['extra-js'] = '/js/userauth-register.js';
+$this->metadata['extra-js'] = '/user-auth/js/userauth-register.js';
 ?>
 
 <div class="wb-frmvld">
