--- a/code/module/Application/view/layout/canada.ca.phtml
+++ b/code/module/Application/view/layout/canada.ca.phtml
@@ -37,7 +37,7 @@ elseif(is_string($this->attribution) && strpos($this->attribution, '|')) {
 }
 
 if(!$this->contentSecurityPolicy) {
-    $this->contentSecurityPolicy = "default-src 'self' *.canada.ca healthycanadians.gc.ca canadiaensensante.gc.ca code.jquery.com ajax.googleapis.com google.com www.google.com www.google-analytics.com ssl.google-analytics.com www.googletagmanager.com *.googleapis.com fonts.gstatic.com use.fontawesome.com 'unsafe-eval' 'unsafe-inline'";
+    $this->contentSecurityPolicy = "default-src 'self' *.canada.ca healthycanadians.gc.ca canadiaensensante.gc.ca code.jquery.com ajax.googleapis.com google.com www.google.com assets.adobedtm.com www.google-analytics.com ssl.google-analytics.com www.googletagmanager.com *.googleapis.com fonts.gstatic.com use.fontawesome.com 'unsafe-eval' 'unsafe-inline'";
 }
 
 
@@ -87,6 +87,21 @@ $usefulLinksLocation = $layout->usefulLinksLocation;
         </script>
         <?=$this->headScript();?>
 
+        <?if($this->useAdobeAnalyticsWithPersonalInformation):?>
+            <script src="//assets.adobedtm.com/be5dfd287373/9b9cb7867b5b/launch-59d77766b86a.min.js" integrity="sha384-utOxgQIMl235gMbaRnP9pUcKebDeg4YnICYoRH1+RPnPz0Z5oXGwUiCm+hmTMk1J" crossorigin="anonymous"></script>
+        <?elseif($this->useAdobeAnalytics):?>
+            <script src="//assets.adobedtm.com/be5dfd287373/0127575cd23a/launch-913b1beddf7a.min.js" integrity="sha384-Y1074qsX7XyHecQ5MgHjYye8e4yWc9Df0FBNcV/mPiMZspE5GoZCkwokg0Rjwtqr" crossorigin="anonymous"></script>
+        <?endif;?>
+        <?if($this->googleAnalyticsId):?>
+            <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=<?=$this->googleAnalyticsId;?>"></script>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', '<?=$this->googleAnalyticsId;?>');
+            </script>
+        <?endif;?>
         <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
         <script>dataLayer1 = [];</script>
         <!-- End Google Tag Manager -->
