minor fix to Analytics, OAuth JS, added crypt module and debug code when in dev

--- a/code/module/Application/view/layout/canada.ca.phtml
+++ b/code/module/Application/view/layout/canada.ca.phtml
@@ -448,5 +448,9 @@ $usefulLinksLocation = $layout->usefulLinksLocation;
         <?endforeach;?>
         <?=$this->inlineScript();?>
         <!-- Custom Scripts End -->
+
+        <?if($this->useAdobeAnalytics || $this->useAdobeAnalyticsWithPersonalInformation):?>
+        <script>_satellite.pageBottom();</script>
+        <?endif;?>
     </body>
 </html>
